==> ChibiOS/ChibiOS-Contrib/os/hal/ports/HT32/LLD/SPIv1/hal_spi_lld.c <==
#include "hal.h"

void spi_lld_init(void) {
    /* Driver initialization.*/
#if HT32_SPI_USE_SPI0 == TRUE
    spiObjectInit(&SPID0);
    SPID0.SPI = SPI0;
//    CKCU->APBCCR0 |= CKCU_APBCCR0_SPI0EN;
#endif
#if HT32_SPI_USE_SPI1 == TRUE
    spiObjectInit(&SPID1);
    SPID1.SPI = SPI1;
//    CKCU->APBCCR0 |= CKCU_APBCCR0_SPI1EN;
#endif
}

void spi_lld_start(SPIDriver *spip) {
    if (spip->state == SPI_STOP) {
        /* Enables the peripheral.*/
#if HT32_SPI_USE_SPI0 == TRUE
        if (&SPID0 == spip) {
            CKCU->APBCCR0 |= CKCU_APBCCR0_SPI0EN;
            nvicEnableVector(SPI0_IRQn, HT32_SPI0_IRQ_PRIORITY);
        }
#endif
#if HT32_SPI_USE_SPI1 == TRUE
        if (&SPID1 == spip) {
            CKCU->APBCCR0 |= CKCU_APBCCR0_SPI1EN;
            nvicEnableVector(SPI1_IRQn, HT32_SPI1_IRQ_PRIORITY);
        }
#endif
    }

    /* Configures the peripheral.*/
    spip->SPI->CR0 = spip->config->cr0;
    spip->SPI->CR1 = spip->config->cr1;
    spip->SPI->CPR = spip->config->cpr;
    //spip->SPI->FCR = 0; //SPI_FCR_FIFOEN | (1U << 4) | (1U << 0);
    spip->SPI->FCR = spip->config->fcr;
    spip->SPI->CR0 |= SPI_CR0_SPIEN;
}

void spi_lld_stop(SPIDriver *spip) {
    if (spip->state == SPI_READY) {
        /* Disables the peripheral.*/
#if HT32_SPI_USE_SPI0 == TRUE
        if (&SPID0 == spip) {
            RSTCU->APBPRSTR0 = RSTCU_APBPRSTR0_SPI0RST;
            CKCU->APBCCR0 &= ~CKCU_APBCCR0_SPI0EN;
            nvicDisableVector(SPI0_IRQn);
        }
#endif
#if HT32_SPI_USE_SPI1 == TRUE
        if (&SPID1 == spip) {
            RSTCU->APBPRSTR0 = RSTCU_APBPRSTR0_SPI1RST;
            CKCU->APBCCR0 &= ~CKCU_APBCCR0_SPI1EN;
            nvicDisableVector(SPI1_IRQn);
        }
#endif
    }
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {
    spip->txptr = txbuf;
    spip->rxptr = rxbuf;
    spip->rxcnt = spip->txcnt = n;
    spip->SPI->IER = SPI_IER_RXBNEIEN | SPI_IER_TXBEIEN;
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {
    spip->SPI->DR = frame;
    while((spip->SPI->SR & SPI_SR_RXBNE) == 0)
        ;
    return (spip->SPI->DR & 0xffff);
}
